--- a/sass/inputs/_input.scss
+++ b/sass/inputs/_input.scss
@@ -1,15 +1,12 @@
-
-//input on image background
-.inputImgBG{
-  border-radius: 2px;
-  -webkit-backdrop-filter: blur(10.8px);
-  backdrop-filter: blur(10.8px);
-  background-color: rgba(255, 255, 255, 0.5);//change color to grey color
-}
-
-
-//input on colored background
-.inputColoredBG{
-  border-radius: 2px;
-  background-color: $white;
+.vvp-input {
+    border-radius: 2px;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 18px;
+    background-color: $white;
+    min-height: 38px;
+    &--transparent {
+        backdrop-filter: blur(10.8px);
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 }
