--- a/sass/inputs/_input.scss
+++ b/sass/inputs/_input.scss
@@ -2,8 +2,7 @@
 //input on image background
 .inputImgBG{
   border-radius: 2px;
-  -webkit-backdrop-filter: blur(10.8px);
-  backdrop-filter: blur(10.8px);
+  filter: blur(10.8px);
   background-color: rgba(255, 255, 255, 0.5);//change color to grey color
 }
 
