--- a/sass/fonts/_fonts.scss
+++ b/sass/fonts/_fonts.scss
@@ -1,5 +1,2 @@
-@import url('http://fonts.googleapis.com/css?family=Lato');
-@import url('https://fonts.googleapis.com/css?family=Merriweather');
-
-$Font4Paragraphs:"Lato",sans-serif;
-$Font4Title:"Merriweather",serif;
+$font-paragraphs:"Lato",sans-serif;
+$font-title:"Merriweather",serif;
