--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -1,35 +1,35 @@
 
-$orange:#F37121;
-$orange80:rgba($orange,0.8);
-$orange60:rgba($orange,0.6);
+$color-orange:#F37121;
+$color-orange80:rgba($color-orange,0.8);
+$color-orange60:rgba($color-orange,0.6);
 
-$red:#D71C23;
-$red80:rgba($red,0.8);
-$red60:rgba($red,0.6);
+$color-red:#D71C23;
+$color-red80:rgba($color-red,0.8);
+$color-red60:rgba($color-red,0.6);
 
-$yellow:#FCAF17;
-$yellow80:rgba($yellow,0.8);
-$yellow60:rgba($yellow,0.6);
+$color-yellow:#FCAF17;
+$color-yellow80:rgba($color-yellow,0.8);
+$color-yellow60:rgba($color-yellow,0.6);
 
-$beige:#B29C88;
-$beige80:rgba($beige,0.8);
-$beige60:rgba($beige,0.6);
+$color-beige:#B29C88;
+$color-beige80:rgba($color-beige,0.8);
+$color-beige60:rgba($color-beige,0.6);
 
-$blue:#0080C3;
-$blue80:rgba($blue,0.8);
-$blue60:rgba($blue,0.6);
+$color-blue:#0080C3;
+$color-blue80:rgba($color-blue,0.8);
+$color-blue60:rgba($color-blue,0.6);
 
-$azure:#00A2E5;
-$azure80:rgba($azure,0.8);
-$azure60:rgba($azure,0.6);
+$color-azure:#00A2E5;
+$color-azure80:rgba($color-azure,0.8);
+$color-azure60:rgba($color-azure,0.6);
 
-$black:#000000;
-$black80:rgba($blue,0.8);
-$black60:rgba($black,0.6);
+$color-black:#000000;
+$color-black80:rgba($color-black,0.8);
+$color-black60:rgba($color-black,0.6);
 
-$white:#FFFFFF;
-$white80:rgba($white,0.8);
-$white60:rgba($white,0.6);
+$color-white:#FFFFFF;
+$color-white80:rgba($color-white,0.8);
+$color-white60:rgba($color-white,0.6);
 
 
 
