--- a/sass/inputs/_input.scss
+++ b/sass/inputs/_input.scss
@@ -3,7 +3,7 @@
     width: 100%;
     box-sizing: border-box;
     font-size: 18px;
-    background-color: $white;
+    background-color: $color-white;
     min-height: 38px;
     &--transparent {
         backdrop-filter: blur(10.8px);
