--- a/sass/mediacard/_mediacard.scss
+++ b/sass/mediacard/_mediacard.scss
@@ -30,7 +30,8 @@
             font-size: 14px;
         }
     }
-    &__arrow {
+    &__toggle {
+        cursor: pointer;
         display: flex;
         align-items: flex-end;
         #arrow {
@@ -43,5 +44,13 @@
         &__open-content {
             margin: 16px 16px;
         }
+    &--show{
+        display: block;
+
+        .vvp-media-card__toggle {
+            transform:rotate(180deg);
+        }
+
+    }
     }
 }
