--- a/sass/select/_select.scss
+++ b/sass/select/_select.scss
@@ -1,7 +1,7 @@
 .vvp-select{
   min-height: 38px;
   width: 100%;
-	background-image: url("../../img/arrow.svg");
+	background-image: url("../../assets/img/arrow.svg");
   background-repeat: no-repeat;
   background-position: 100% 0;
 	background-size: 34px;
