--- a/sass/select/_select.scss
+++ b/sass/select/_select.scss
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   background-position: 100% 0;
 	background-size: 34px;
-  background-color: $white;
+  background-color: $color-white;
   font-size: 18px;
   border-radius: 2px;
   padding-left: 10px;
