--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,5 @@
 @import "buttons/buttons";
 @import "checkbox/checkbox";
 @import "mediacard/mediacard";
+@import "select/select";
+@import "table/table"
