--- a/sass/accordion/_accordion.scss
+++ b/sass/accordion/_accordion.scss
@@ -10,10 +10,7 @@
 
   &--open {
     .vvp-accordion__content {
-      background-color: rgba(178, 156, 136, 0.1);
       display: flex;
-      justify-content: space-evenly;
-      padding-bottom: 16px;
     }
     .vvp-accordion__toggle {
       transform:rotate(180deg);
@@ -27,7 +24,6 @@
   }
 
   &__toggle{
-    //при удалении кнопка увеличивается
     cursor:pointer;
     width: 24px;
     height: 24px;
@@ -39,9 +35,18 @@
   }
 
   &__content{
+    background-color: rgba($color-beige, 0.1);
     display: none;
     flex-flow: row wrap;
-    align-content: flex-start;
+    align-content: center;
+    padding-bottom: 16px;
+  }
 
+  &__left-column{
+    padding-left: 16px;
+    margin-right: 23px;
+  }
+  &__right-column{
+    padding-right: 16px;
   }
 }
