--- a/sass/mediacard/_mediacard.scss
+++ b/sass/mediacard/_mediacard.scss
@@ -2,7 +2,7 @@
     margin-top:16px;
     display: flex;
     flex-direction: column;
-    background-color: rgba(178, 156, 136, 0.2);
+    background-color: rgba($color-beige,0.2);
     &__content {
         margin: 16px 16px;
         display: flex;
@@ -44,13 +44,14 @@
         &__open-content {
             margin: 16px 16px;
         }
-    &--show{
-        display: block;
-
+    }
+    &--open{
+        .vvp-media-card__dropdown-info{
+            display: block;
+        }
         .vvp-media-card__toggle {
             transform:rotate(180deg);
+            align-items: flex-start;
         }
-
-    }
     }
 }
