--- a/sass/accordion/_accordion.scss
+++ b/sass/accordion/_accordion.scss
@@ -10,7 +10,7 @@
 
   &--open {
     .vvp-accordion__content {
-      display: flex;
+      display: block;
     }
     .vvp-accordion__toggle {
       transform:rotate(180deg);
@@ -36,17 +36,10 @@
 
   &__content{
     background-color: rgba($color-beige, 0.1);
+    padding: 16px;
     display: none;
     flex-flow: row wrap;
     align-content: center;
-    padding-bottom: 16px;
   }
 
-  &__left-column{
-    padding-left: 16px;
-    margin-right: 23px;
-  }
-  &__right-column{
-    padding-right: 16px;
-  }
 }
