--- a/sass/login/_login.scss
+++ b/sass/login/_login.scss
@@ -1,6 +1,10 @@
 .login {
-    text-align: center;
-    background-image: url(/assets/img/1.jpg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url(/img/2.jpg);
     background-size: cover;
     position: relative;
     
@@ -13,5 +17,11 @@
         height: 100%;
         width: 100%;
         background-color: rgba(255, 255, 255, .4);
+    }
+    
+        .logFrm {
+        width: 300px;
+        height: 30px;
+        margin-bottom: 16px;
     }
 }
