--- a/sass/slider/_slider.scss
+++ b/sass/slider/_slider.scss
@@ -1,11 +1,11 @@
-.vvp-grid__col-lg-8{
-  display: flex;
+.vvp-slider__wrap{
   background-color: $color-black80;
+  display: flex;
   height: 533px;
   align-items: center;
   justify-content: center;
-}
 
+}
 .vvp-slider {
   width: 100%;
   height: 414px;
@@ -46,6 +46,7 @@
 
   &__gallery-items{
         padding-left: 0;
+        margin:0;
         display: flex;
         transition: transform .5s;
         z-index: 1;
