--- a/sass/login/_login.scss
+++ b/sass/login/_login.scss
@@ -14,14 +14,31 @@
         position: absolute;
         top: 0;
         left: 0;
-        height: 100%;
         width: 100%;
         background-color: rgba(255, 255, 255, .4);
     }
+    .form-country {
+        position: relative;
+    }
+}
+
+.countryAutoComplete {
+    display: none;
+    position: absolute;
+    width: 100%;
+    box-sizing: border-box;
+    list-style: none;
+    padding-left: 0;
+    margin-top: 0;
+    background: white;
+    border: 1px solid gray;
+    line-height: 30px;
     
-        .logFrm {
-        width: 300px;
-        height: 30px;
-        margin-bottom: 16px;
+    .listElement {
+        pading-left: 10px;
+        &:hover {
+            background: beige;
+            cursor: pointer;
+        }
     }
 }
