change file placement

--- a/sass/login/_login.scss
+++ b/sass/login/_login.scss
@@ -35,7 +35,7 @@
     line-height: 30px;
     
     .listElement {
-        pading-left: 10px;
+        padding-left: 10px;
         &:hover {
             background: beige;
             cursor: pointer;
