--- a/sass/mediacard/_mediacard.scss
+++ b/sass/mediacard/_mediacard.scss
@@ -35,7 +35,7 @@
         cursor: pointer;
         display: flex;
         align-items: flex-end;
-        #arrow {
+        .mediacard-arrow {
             height: 24px;
         }
     }
