--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -14,6 +14,7 @@ $color-yellow60:rgba($color-yellow,0.6);
 $color-beige:#B29C88;
 $color-beige80:rgba($color-beige,0.8);
 $color-beige60:rgba($color-beige,0.6);
+$color-beige20:rgba($color-beige,0.2);
 
 $color-blue:#0080C3;
 $color-blue80:rgba($color-blue,0.8);
@@ -26,11 +27,13 @@ $color-azure60:rgba($color-azure,0.6);
 $color-black:#000000;
 $color-black80:rgba($color-black,0.8);
 $color-black60:rgba($color-black,0.6);
+$color-black30:rgba($color-black,0.3);
+$color-black10:rgba($color-black,0.1);
 
 $color-white:#FFFFFF;
 $color-white80:rgba($color-white,0.8);
 $color-white60:rgba($color-white,0.6);
 
-
+$color-grey:#4c4c4c;
 
 
