--- a/sass/buttons/_buttons.scss
+++ b/sass/buttons/_buttons.scss
@@ -1,11 +1,12 @@
 .vvp-button {
+    width: 100%;
     font-size: 18px;
-    margin-top: 10px;
+    margin-top: 24px;
     font-family: $font-paragraphs;
     font-weight: bold;
     text-align: center;
     border-radius: 2px;
-    padding: 10px 24px;
+    height: 42px;
     min-width: 160px;
     &:hover {
         text-decoration: none;
