--- a/sass/menu/_menu.scss
+++ b/sass/menu/_menu.scss
@@ -3,17 +3,27 @@
 	height: 100%;
 	width: 354px;
 	position: absolute;
+	margin-left: -354px;
 	color: $color-grey;
 	line-height: 22px;
 	font-family: Lato, sans-serif;
 	font-size: 18px;
+	transition: 0.5s;
 
-	&--close{
-		margin-left: -354px;
-	}
+	&--active{
+			.vvp-menu{
+				margin-left: 0;
+				transition: 0.5s;
+			}
 
-	&--open{
-		margin-left: 0;
+			.vvp-container{
+				transform: translate(354px);
+				transition: 0.5s;
+			}
+
+			.vvp-menu-blur{
+				display: block;
+			}
 	}
 
 	&__header{
@@ -45,38 +55,42 @@
 		}
 	}
 
-	&-close{
+	&-blur{
+		display: none;
+		width: 100%;
+		min-height: 100vh;
+		position: absolute;
+		background-color: $color-black30;
+		cursor: pointer;
+	}
+
+	&__close{
 		display: inline-block;
 		position: relative;
 		top: 15px;
 		left: 26px;
+		text-decoration: none;
+		color: inherit;
+	}
+
+	&__open{
+		top: 22px;
+		left: 26px;
 		cursor: pointer;
 	}
 
-	&-sign{
+	&__icon{
 		display: inline-block;
 		width: 32px;
 		height: 32px;
 		position: relative;
-		top: 24px;
-		left: 23px;
-	}
 
-	&-show{
-		&--active{
-			cursor: pointer;
+		&--cross{
+			top: 9px;
 		}
 	}
 }
 
-.vvp-content{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-
-	&--moved{
-		margin-left: 354px;
-		background: $color-black30;
-	}
+.vvp-container{
+	transition: 0.5s;
 }
-
