--- a/sass/table/_table.scss
+++ b/sass/table/_table.scss
@@ -17,8 +17,11 @@
 
 	&__image{
 		display: block;
-		max-width: 100%;
-		max-height: 100%;
+		max-width: 90%;
+		max-height: 90%;
+		padding-left: 5%;
+		padding-right: 5%;
+
 	}
 
 	&__text{
@@ -28,6 +31,12 @@
 
 		&--bottom{
 			padding-bottom: 16px;
+		}
+
+		&--central{
+    margin: 10px;
+    text-align: center;
+    padding: 0;
 		}
 	}
 
@@ -42,9 +51,10 @@
 		}
 	}
 
-	td{
+	td, th{
 		table{
 			border-collapse: collapse;
+			width: 100%;
 		}
 
 		tr{
@@ -62,6 +72,47 @@
 		margin-left: auto;
 		padding-right: 21px;
 		padding-bottom: 11px;
+	}
+
+	&__input-container{
+		display: inline-block;
+   	width: 37%;
+   	padding: 3%;
+   	margin-left: 7%;
+	}
+
+	&__button-container{
+		display: inline-block;
+   	width: 37%;
+   	padding: 3%;
+   	margin-right: 7%;
+
+   	&--large{
+   		margin-left: 7%;
+   		margin-right: 7%;
+   		width: 81%;
+   	}
+	}
+
+	&__button{
+		margin-top: 0;
+		min-width: 50px;
+	}
+
+	&__input{
+		margin-bottom: 0;
+	}
+
+	&__cell--valign{
+		&-top{
+			vertical-align: top;
+		}
+		&-middle{
+			vertical-align: middle;
+		}
+		&-bottom{
+			vertical-align: bottom;
+		}
 	}
 
 	&__cell--width{
