--- a/sass/table/_table.scss
+++ b/sass/table/_table.scss
@@ -17,11 +17,12 @@
 
 	&__image{
 		display: block;
-		max-width: 90%;
-		max-height: 90%;
-		padding-left: 5%;
-		padding-right: 5%;
+		max-width: 100%;
+		max-height: 100%;
 
+		&-container{
+			margin: 0 10px;
+		}
 	}
 
 	&__text{
@@ -68,6 +69,14 @@
 		}
 	}
 
+	&__button-panel{
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: space-evenly;
+		align-items: center;
+		height: 100px;
+	}
+
 	&__icon{
 		margin-left: auto;
 		padding-right: 21px;
@@ -77,20 +86,14 @@
 	&__input-container{
 		display: inline-block;
    	width: 37%;
-   	padding: 3%;
-   	margin-left: 7%;
 	}
 
 	&__button-container{
 		display: inline-block;
    	width: 37%;
-   	padding: 3%;
-   	margin-right: 7%;
 
    	&--large{
-   		margin-left: 7%;
-   		margin-right: 7%;
-   		width: 81%;
+   		width: 83%;
    	}
 	}
 
